--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import ;
 
 html {
-
+ padding: 0px;
 }
 
 html, body {
@@ -134,7 +134,7 @@ p {
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -157,7 +157,7 @@ p {
 .text {
   color: #f2f2f2;
   font-size: 15px;
-  padding: 8px 12px;
+  padding: 0px 0px;
   position: absolute;
   bottom: 8px;
   width: 100%;
