--- a/testing/test.css
+++ b/testing/test.css
@@ -1,15 +1,45 @@
-html, body {
-  height: 100%;
+* {box-sizing: border-box}
+.mySlides1, .mySlides2 {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
-body {
-  display: flex;
-  flex-direction: column;
+
+.slideshowPic {
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
-.content {
-  flex: 1 0 auto;
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
-.footer {
-  flex-shrink: 0;
-  background-color: orange;
-  height: 70px;
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a grey background color */
+.prev:hover, .next:hover {
+  background-color: #f1f1f1;
+  color: black;
 }
